--- a/resources/release/wix/main.wxs
+++ b/resources/release/wix/main.wxs
@@ -88,11 +88,11 @@
 
         <Directory Id='TARGETDIR' Name='SourceDir'>
             <Directory Id='$(var.PlatformProgramFilesFolder)' Name='PFiles'>
-                <Directory Id="APPLICATIONFOLDER" Name="Walksnail OSD OVerlay Tool" />
+                <Directory Id="APPLICATIONFOLDER" Name="Walksnail OSD Overlay Tool" />
             </Directory>
 
             <Directory Id="ProgramMenuFolder">
-                <Directory Id="ApplicationProgramsFolder" Name="Walksnail OSD OVerlay Tool" />
+                <Directory Id="ApplicationProgramsFolder" Name="Walksnail OSD Overlay Tool" />
             </Directory>
         </Directory>
 
@@ -101,7 +101,7 @@
                 <File Id='LicenseFile'
                     Name='License.rtf'
                     DiskId='1'
-                    Source='wix\License.rtf'
+                    Source='resources\release\wix\License.rtf'
                     KeyPath='yes' />
             </Component>
 
@@ -119,22 +119,22 @@
             <Directory Id="ffmpeg" Name="ffmpeg">
                 <Component Id="ffmpeg" Guid="ed8f6fef-0129-4926-9250-9f15eb507fbc">
                     <File Id="ffmpeg" Name="ffmpeg.exe"
-                        Source="C:\Users\Alexander\Downloads\ffmpeg-6.0-essentials_build\ffmpeg\bin\ffmpeg.exe"
+                        Source="$(var.CargoTargetBinDir)\ffmpeg\ffmpeg.exe"
                         KeyPath="yes" />
                 </Component>
                 <Component Id="ffprobe" Guid="88c5f8ed-ec1b-4a6c-8cf3-c649b42e0aa7">
                     <File Id="ffprobe" Name="ffprobe.exe"
-                        Source="C:\Users\Alexander\Downloads\ffmpeg-6.0-essentials_build\ffmpeg\bin\ffprobe.exe"
+                        Source="$(var.CargoTargetBinDir)\ffmpeg\ffprobe.exe"
                         KeyPath="yes" />
                 </Component>
                 <Component Id="ffmpeg_license" Guid="45172027-9711-483b-991f-6c2d99819e40">
                     <File Id="ffmpeg_license" Name="LICENSE"
-                        Source="C:\Users\Alexander\Downloads\ffmpeg-6.0-essentials_build\ffmpeg\LICENSE"
+                        Source="$(var.CargoTargetBinDir)\ffmpeg\LICENSE"
                         KeyPath="yes" />
                 </Component>
                 <Component Id="ffmpeg_readme" Guid="a6f0d44e-7318-4108-a4a3-813da0504861">
                     <File Id="ffmpeg_readme" Name="README.txt"
-                        Source="C:\Users\Alexander\Downloads\ffmpeg-6.0-essentials_build\ffmpeg\README.txt"
+                        Source="$(var.CargoTargetBinDir)\ffmpeg\README.txt"
                         KeyPath="yes" />
                 </Component>
 
@@ -245,7 +245,7 @@
           Disabling the EULA dialog in the installer requires commenting out
           or removing the following `WixVariable` tag
         -->
-        <WixVariable Id='WixUILicenseRtf' Value='wix\License.rtf' />
+        <WixVariable Id='WixUILicenseRtf' Value='resources\release\wix\License.rtf' />
 
 
         <!--
